# fetch_rewards_takehome_ch

./: .env_template  .gitignore  README.md  pyproject.toml  util.py
1_relational_model/: placeholder.md
2_stakeholder_questions/: question_1.md  question_2.md  question_3.md  question_4.md  question_5.md  question_6.md
3_data_quality_issues/: data_issue_1.md  data_issue_2.md
4_email_to_business_stakeholder/: stakeholder_email.md
data_quality_issues/: data_issue_1.md  data_issue_2.md  data_issue_3.md
ingestion/: ingestion.py  ingestion_cache.py  sql_commands.py
snowflake_models/: brands.sql  dag.yml  deploy_models.py  question_1.sql  question_2.sql  question_3.sql  question_4.sql  question_5.sql  question_6.sql  receipt_items.sql  receipts.sql  users.sql
